fix: add block spacing according to rule 3.5 in hatml-and-css.md

--- a/style.css
+++ b/style.css
@@ -1,149 +1,161 @@
 /* Basic Style */
 body {
-    background-color: #f8f8f8;
-    color: #333;
-    font-family: Lato, sans-serif;
+  background-color: #f8f8f8;
+  color: #333;
+  font-family: Lato, sans-serif;
 }
 
 .header {
-    width: 500px;
-    margin: 0 auto;
-    display: block;
-    text-align: right;
+  width: 500px;
+  margin: 0 auto;
+  display: block;
+  text-align: right;
 }
 
 .header__img {
-    width: 100%;
+  width: 100%;
 }
 
 .header__info {
-    font-family: fantasy, cursive;
+  font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.header { text-align: center;
+
+  .header {
+    text-align: center;
   }
+
 }
 
 .main {
-    display: block;
-    width: 500px;
-    margin: 0 auto 0;
+  display: block;
+  width: 500px;
+margin: 0 auto 0;
 }
 
 .task {
-    width: 56%;
-    display: inline-block;
-    flex-grow: 1
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1
 }
 
 .new-task__input-container {
-    display: flex;
+  display: flex;
 }
 
 .tasks-list__incomplete-tasks-items,
 .tasks-list__completed-tasks-items{
-    margin:0;
-    padding: 0;
-    list-style-type: none;
+  margin:0;
+  padding: 0;
+  list-style-type: none;
 }
 
 .button {
-    background: none;
-    border: 0;
-    color: #888;
-    font-size: 15px;
-    width: 60px;
-    font-family: Lato, sans-serif;
-    cursor: pointer;
+  background: none;
+  border: 0;
+  color: #888;
+  font-size: 15px;
+  width: 60px;
+  font-family: Lato, sans-serif;
+   cursor: pointer;
 }
+
 .button:hover {
-    color: #3a3A3a;
+  color: #3a3A3a;
 }
+
 /* Heading */
 .title,
 .new-task__label {
-    color: #333;
-    font-weight: 700;
-    font-size: 15px;
-    border-bottom: 2px solid #333;
-    padding: 30px 0 10px;
-    margin: 0;
-    text-transform: uppercase;
+  color: #333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
 }
+
 .input-text {
-    margin: 0;
-    font-size: 18px;
-    line-height: 18px;
-    height: 21px;
-    padding: 0 9px;
-    border: 1px solid #dDd;
-    background: #FFF;
-    border-radius: 6px;
-    font-family: Lato, sans-serif;
-    color: #888;
+  margin: 0;
+  font-size: 18px;
+  line-height: 18px;
+  height: 21px;
+  padding: 0 9px;
+  border: 1px solid #dDd;
+  background: #FFF;
+  border-radius: 6px;
+  font-family: Lato, sans-serif;
+  color: #888;
 }
+
 .input-text:focus {
-    color: #333;
+  color: #333;
 }
 
 /* New Task */
 .new-task__label {
-    display: block;
-    margin: 0 0 20px;
+  display: block;
+  margin: 0 0 20px;
 }
+
 .new-task__input {
-    width: 318px;
+  width: 318px;
 }
 
 /* Task list */
 .tasks-list__incomplete-tasks-item,
 .tasks-list__completed-tasks-item {
-    overflow: hidden;
-    padding: 20px 0;
-    border-bottom: 1px solid #eee;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  overflow: hidden;
+  padding: 20px 0;
+  border-bottom: 1px solid #eee;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
 
 .checkbox {
-    margin: 0 10px;
+  margin: 0 10px;
 }
+
 .task-label {
-    padding-left: 10px;
-    box-sizing: border-box;
-    font-size: 18px;
-    width: 226px;
+  padding-left: 10px;
+  box-sizing: border-box;
+  font-size: 18px;
+  width: 226px;
 }
+
 .input-text {
-    width: 226px
+  width: 226px
 }
+
 .delete__img {
-    height: 2em;
-    transform: rotateZ(45deg);
-    transition: transform 200ms ease-in;
+  height: 2em;
+  transform: rotateZ(45deg);
+  transition: transform 200ms ease-in;
 }
+
 .delete__img:hover {
-    transform: rotateZ(0);
+  transform: rotateZ(0);
 }
 
 /* Completed */
 .tasks-list__completed-tasks-items .task-label {
-    text-decoration: line-through;
-    color: #888;
+  text-decoration: line-through;
+  color: #888;
 }
 
 /* Edit Task */
 .tasks .input-text{
-    display:none
+  display:none
 }
 
 .edit-mode .input-text{
-    display:inline-block;
-    width:224px
+  display:inline-block;
+  width:224px
 }
+
  .edit-mode .task-label{
-    display:none;
+  display:none;
 }
